# tutorial_code

./: .gitignore  NOTICE.txt  README.md
buildsystems/: README.md
buildsystems/cpp_cmake/: CMakeLists.txt  README.md
buildsystems/cpp_cmake/apps/: main.cpp
buildsystems/cpp_cmake/include/VectorArithmetic/: FloatVector.hpp  vector_arith.hpp
buildsystems/cpp_cmake/src/: FloatVector.cpp  vector_arith.cpp
buildsystems/cpp_cmake/test/: float_vector_test.cpp  vector_arith_test.cpp
buildsystems/gradle/: .gitignore  settings.gradle.kts
buildsystems/gradle/gradle/: libs.versions.toml
buildsystems/gradle/palindrome_checker/: build.gradle.kts
buildsystems/julia/: .gitignore
buildsystems/julia/FunctionDiff/: Project.toml
buildsystems/julia/cli_interface/: Project.toml  run_program.jl
buildsystems/julia/notebook_dir/: tutorial_notebook.jl
buildsystems/swift/: .gitignore  Package.swift  README.md
buildsystems/swift/Sources/: Multiplication.swift  main.swift
cordic/: README.md
cordic/cordic_python/: .gitignore  requirements.txt
cordic_python/cordic_python/: cordic_plot.py  sin_cos_fixed.py  sin_cos_fixed_animated.py
linalg/: .gitignore  Package.swift
linalg/Extra/: generate_matrices_cramers.py
linalg/Sources/: Matrix+Cramer.swift  Matrix+CustomStringConvertible.swift  Matrix+LaTeX.swift  Matrix.swift  main.swift
linalg/Tests/: MatrixCramerTests.swift  MatrixDeterminantTests.swift  MatrixInitTests.swift  MatrixPrettyPrintTests.swift  MatrixSubscriptTests.swift
num_ode/: forward_euler_plots.py
num_ode/NumOdeTutorial/: .gitignore  Project.toml
(+23 files in other folders)
